--- a/ios/Podfile
+++ b/ios/Podfile
@@ -9,8 +9,10 @@ end
 
 target 'Plugin' do
   capacitor_pods
+  pod 'libOpenInstallSDK', '~> 2.6.0'
 end
 
 target 'PluginTests' do
   capacitor_pods
+  pod 'libOpenInstallSDK', '~> 2.6.0'
 end
